--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,41 @@
   <artifactId>zhaoyu_base</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <parent>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-parent</artifactId>
+	<version>2.0.4.RELEASE</version>
+  </parent>
+  
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	<skip.maven.deploy>false</skip.maven.deploy>
+	<java.version>1.8</java.version>
+	<fastjson.version>1.2.29</fastjson.version>
+	<poi.version>3.15</poi.version>
+	<springboot.mybatis.version>1.3.2</springboot.mybatis.version>
+	<pagehelper.version>1.2.5</pagehelper.version>
+	<druid.version>1.1.9</druid.version>
+  </properties>
+  
+  <dependencies>
+  	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
+	<!-- boot.starter.web -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+  	</dependency>
+  	   
+  </dependencies>
+  <modules>
+  	<module>zhaoyu_base-common</module>
+  </modules>
 </project>
