--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,9 @@
   <modules>
   	<module>zhaoyu_base-common</module>
   	<module>zhaoyu_base-mysql</module>
+  	<module>zhaoyu_base-dubbo</module>
+  	<module>zhaoyu_base-freemarker</module>
+  	<module>zhaoyu_base-redis</module>
+  	<module>zhaoyu_base-support</module>
   </modules>
 </project>
